--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<a href="main.html" class="intro__text"><span>Перейти на сайт</span></a>
 		<!--VIDEO-->
 		<div class="video">
-			<video width="100%" height="auto" loop="loop" preload="auto" muted autoplay>
-				<source src="video/intro-en.mp4">
+			<video width="100%" height="auto" loop="loop" preload="auto"  autoplay>
+				<source src="video/intro.mp4">
 				</video>
 			</div><!--video-->
 		</header>
