--- a/portfolio.html
+++ b/portfolio.html
@@ -24,13 +24,28 @@
 	</header>
 	<main>
 		<!--New project-->
-		<div class="new__project portfolio__background">
-			<div class="new__project__portfolio">
+		<div class="portfolio__background">
+			<div class="new__project__portfolio__block__moushen">
+				<a href="moushen.html" class="new__project__portfolio__link__moushen"><span>Moushen Design</span></a>
+			</div><!--new__project__portfolio__block__moushen-->
+			<div class="new__project__portfolio__block__web">
+				<a href="" class="new__project__portfolio__link__web"><span>WEB</span></a>
+			</div><!--new__project__portfolio__block__web-->
+			<div class="new__project__portfolio__block__brand">
+				<a href="" class="new__project__portfolio__link__brand"><span>BRANDING</span></a>
+			</div><!--new__project__portfolio__block__brand-->
+			<div class="new__project__portfolio__block__3d">
+				<a href="" class="new__project__portfolio__link__3d"><span>3D Graphics</span></a>
+			</div><!--new__project__portfolio__block__brand-->
+		</div><!--portfolio__background-->
+
+
+			<!--<div class="new__project__portfolio">
 				<a href="moushen.html" class="new__project__portfolio__moushen"><span>Moushen Design</span><img src="img/moushen_portfolio.png"><br></a>
 				<a href="" class="new__project__portfolio__web"><span>WEB</span><img src="img/web_portfolio.png" alt="Web"></a>
 				<a href="" class="new__project__portfolio__brand"><img src="img/brand.png" alt="Brand"><span>BRANDING</span></a>
 				<a href="" class="new__project__portfolio__3d"><img src="img/3d_portfolio.png"><span>3D Graphics</span></a>
-			</div>
+			</div>-->
 		</div><!--new__project-->
 	</main>
 	<footer>
@@ -42,6 +57,10 @@
 				<li><a href="price.html">Прайс-лист</a></li>
 				<li><a href="portfolio.html">Портфолио</a></li>
 			</ul>
+
+			<ul>
+				<li><a href="index.html#about>">О студии/<a></li>
+			</ul>	
 		</div><!--footer__left-->
 		<div class="footer__center">
 			<h1>CollPro Design Studia</h1>
@@ -60,7 +79,7 @@
 					<a href="https://vk.com/n_niko">vk.com/n_niko</a>
 				</p>
 				<p>collpro.mail@gmail.com</p>
-				<p>vk.com/collprodesign</p>
+				<a href="https://vk.com/collprodesign">vk.com/collprodesign</a>
 			</div><!--footer__center-->
 		</footer>
 	</body>
